--- a/cafe.html
+++ b/cafe.html
@@ -22,44 +22,21 @@
     <meta name="twitter:image" content="" />
     <meta name="twitter:url" content="" />
     <meta name="twitter:card" content="" />
-
-    <!-- Place favicon.ico and apple-touch-icon.png in the root directory -->
     <link rel="shortcut icon" href="assets/logos/puntomx_ico.ico">
-    <!-- <link href='https://fonts.googleapis.com/css?family=Lato:400,100,100italic,300,300italic,400italic,700italic,900,700,900italic' rel='stylesheet' type='text/css'> -->
-
-    <!-- Stylesheets -->
-    <!-- Dropdown Menu -->
+    <!-----------------------FONT AWESOME--------------------->
+    <script src="https://kit.fontawesome.com/f40904d23d.js" crossorigin="anonymous"></script>
     <link rel="stylesheet" href="css/superfish.css">
-    <!-- Owl Slider -->
-    <!-- <link rel="stylesheet" href="css/owl.carousel.css"> -->
-    <!-- <link rel="stylesheet" href="css/owl.theme.default.min.css"> -->
-    <!-- Date Picker -->
     <link rel="stylesheet" href="css/bootstrap-datepicker.min.css">
-    <!-- CS Select -->
     <link rel="stylesheet" href="css/cs-select.css">
     <link rel="stylesheet" href="css/cs-skin-border.css">
-
-    <!-- Themify Icons -->
     <link rel="stylesheet" href="css/themify-icons.css">
-    <!-- Flat Icon -->
     <link rel="stylesheet" href="css/flaticon.css">
-    <!-- Icomoon -->
     <link rel="stylesheet" href="css/icomoon.css">
-    <!-- Flexslider  -->
     <link rel="stylesheet" href="css/flexslider.css">
-
-    <!-- Style -->
     <link rel="stylesheet" href="css/style.css">
     <link rel="stylesheet" href="css/slider.css">
     <link rel="stylesheet" href="css/mybtn_flot.css">
-
-    <!-- Modernizr JS -->
     <script src="js/modernizr-2.6.2.min.js"></script>
-    <!-- FOR IE9 below -->
-    <!--[if lt IE 9]>
-    <script src="js/respond.min.js"></script>
-    <![endif]-->
-
 </head>
 <body>
 <!------ modals ------->
@@ -92,7 +69,7 @@
     </div>
 </div>
 <div class="modal fade" id="sucursalH" tabindex="-1" role="dialog" aria-labelledby="exampleModalCenterTitle" aria-hidden="true">
-    <div class="modal-dialog modal-dialog-centered" role="document">
+    <div class="modal-dialog modal-dialog-centered modal-lg" role="document">
         <div class="modal-content">
             <div class="modal-header" style="background-color: var(--color-primario);">
                 <h5 class="modal-title fontWhite cursiveFont">Hotel Punto MX - Ubicación de la Sucursal</h5>
@@ -321,16 +298,16 @@
                     <div class="slider">
                         <ul>
                             <li>
-                                <img src="./assets/webp/ROOM_SERVICE.webp" alt="">
+                                <img src="./assets/webp/SALMON.jpeg" alt="">
                             </li>
                             <li>
-                                <img src="./assets/webp/ROOM_SERVICE.webp" alt="">
+                                <img src="./assets/webp/JACUZZI.jpeg" alt="">
                             </li>
                             <li>
-                                <img src="./assets/webp/ROOM_SERVICE.webp" alt="">
+                                <img src="./assets/webp/AMENIDADES.jpeg" alt="">
                             </li>
                             <li>
-                                <img src="./assets/webp/ROOM_SERVICE.webp" alt="">
+                                <img src="./assets/webp/Punto_MX-32.jpeg" alt="">
                             </li>
                         </ul>
                     </div>
@@ -418,36 +395,21 @@
                 </div>
             </div>
         </footer>
-
     </div>
-    <!-- END fh5co-page -->
-
 </div>
 
 <!-- Javascripts -->
 <script src="js/jquery-2.1.4.min.js"></script>
-<!-- Dropdown Menu -->
 <script src="js/hoverIntent.js"></script>
 <script src="js/superfish.js"></script>
-<!-- Bootstrap -->
 <script src="js/bootstrap.min.js"></script>
-<!-- Waypoints -->
 <script src="js/jquery.waypoints.min.js"></script>
-<!-- Counters -->
 <script src="js/jquery.countTo.js"></script>
-<!-- Stellar Parallax -->
 <script src="js/jquery.stellar.min.js"></script>
-<!-- Owl Slider -->
-<!-- // <script src="js/owl.carousel.min.js"></script> -->
-<!-- Date Picker -->
 <script src="js/bootstrap-datepicker.min.js"></script>
-<!-- CS Select -->
 <script src="js/classie.js"></script>
 <script src="js/selectFx.js"></script>
-<!-- Flexslider -->
 <script src="js/jquery.flexslider-min.js"></script>
-
 <script src="js/custom.js"></script>
-
 </body>
 </html>
