--- a/cdmx.html
+++ b/cdmx.html
@@ -1,5 +1,5 @@
 <!DOCTYPE html>
-<html>
+<html lang="es">
 <head>
     <meta charset="utf-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
@@ -8,7 +8,6 @@
     <meta name="description" content="Website Hoteles PUNTO MX" />
     <meta name="keywords" content="Hoteles, CDMX, PUNTOMX, TURISTA" />
     <meta name="author" content="eknr" />
-
     <!-- Facebook and Twitter integration -->
     <meta property="og:title" content=""/>
     <meta property="og:image" content=""/>
@@ -21,12 +20,8 @@
     <meta name="twitter:card" content="" />
     <!-------------------------------------------->
     <link rel="shortcut icon" href="assets/logos/puntomx_ico.ico">
-
-    <!--<link href="https://fonts.googleapis.com/css?family=Open+Sans:300,400,600,700,800" rel="stylesheet">-->
-    <!-------------------------------------------->
     <!-----------------------FONT AWESOME--------------------->
     <script src="https://kit.fontawesome.com/f40904d23d.js" crossorigin="anonymous"></script>
-    <!-------------------------------------------->
     <!-------------------------------------------->
     <!-- Stylesheets -->
     <link rel="stylesheet" href="css/superfish.css">
@@ -39,12 +34,14 @@
     <link rel="stylesheet" href="css/flexslider.css">
     <link rel="stylesheet" href="css/style.css">
     <link rel="stylesheet" href="css/mybtn_flot.css">
-    <!--------------------------->
-    <link rel="stylesheet" href="css/bootstrap.min.css">
-    <!--<link rel="stylesheet" href="css/hero-slider.css">-->
+    <link rel="stylesheet" href="css/bootstrap.min.css">                                      <!-- Bootstrap style -->
+    <link rel="stylesheet" type="text/css" href="css/datepicker.css"/>
+    <link rel="stylesheet" type="text/css" href="slick/slick.css"/>
+    <link rel="stylesheet" type="text/css" href="slick/slick-theme.css"/>
+    <link rel="stylesheet" href="css/t-style.css">                                   <!-- Templatemo style -->
+    <link rel="stylesheet" href="css/style.css">
     <link rel="stylesheet" href="css/tt-main.css">
     <script src="js/modernizr-2.6.2.min.js"></script>
-    <!-------------------------------------------->
     <!-------------------------------------------->
 </head>
 <body>
@@ -501,43 +498,35 @@
         </footer>
     </div>
 </div>
-
-<script src="https://ajax.googleapis.com/ajax/libs/jquery/1.11.2/jquery.min.js"></script>
-<!--<script>window.jQuery || document.write('<script src="js_t/jquery-1.11.3.min.js"><\/script>')</script>-->
-<script src="js_t/bootstrap.min.js"></script>
-<!--<script src="js/plugins.js"></script>
-<script src="js/main.js"></script>-->
-<!--
-<script>
-    function openCity(cityName) {
-        var i;
-        var x = document.getElementsByClassName("city");
-        for (i = 0; i < x.length; i++) {
-            x[i].style.display = "none";
-        }
-        document.getElementById(cityName).style.display = "block";
-    }
-</script>-->
-
+<!-- Javascripts -->
+<!--<script src="js/jquery-2.1.4.min.js"></script>-->
+<script src="js_t/jquery-1.11.3.min.js"></script>
+<script src="js/hoverIntent.js"></script>
+<script src="js/superfish.js"></script>
+<script src="js/bootstrap.min.js"></script>
+<script src="js/jquery.waypoints.min.js"></script>
+<script src="js/jquery.countTo.js"></script>
+<script src="js/jquery.stellar.min.js"></script>
+<script src="js/bootstrap-datepicker.min.js"></script>
+<script src="js/classie.js"></script>
+<script src="js/selectFx.js"></script>
+<script src="slick/slick.min.js"></script>
+<script src="js_t/datepicker.min.js"></script>
+<script src="js_t/jquery.singlePageNav.min.js"></script>
+<script src="js/jquery.flexslider-min.js"></script>
+<script src="js/custom.js"></script>
 <script>
     $(document).ready(function(){
-        // Add smooth scrolling to all links
         $(".fixed-side-navbar a, .primary-button a").on('click', function(event) {
-            // Make sure this.hash has a value before overriding default behavior
             if (this.hash !== "") {
-                // Prevent default anchor click behavior
                 event.preventDefault();
-                // Store hash
                 var hash = this.hash;
-                // Using jQuery's animate() method to add smooth page scroll
-                // The optional number (800) specifies the number of milliseconds it takes to scroll to the specified area
                 $('html, body').animate({
                     scrollTop: $(hash).offset().top
                 }, 800, function(){
-                    // Add hash (#) to URL when done scrolling (default click behavior)
                     window.location.hash = hash;
                 });
-            } // End if
+            }
         });
     });
 </script>
