--- a/contact.html
+++ b/contact.html
@@ -22,43 +22,20 @@
   <meta name="twitter:image" content="" />
   <meta name="twitter:url" content="" />
   <meta name="twitter:card" content="" />
-
-  <!-- Place favicon.ico and apple-touch-icon.png in the root directory -->
   <link rel="shortcut icon" href="assets/logos/puntomx_ico.ico">
   <!-- <link href='https://fonts.googleapis.com/css?family=Lato:400,100,100italic,300,300italic,400italic,700italic,900,700,900italic' rel='stylesheet' type='text/css'> -->
   <script src="https://kit.fontawesome.com/f40904d23d.js" crossorigin="anonymous"></script>
-  <!-- Stylesheets -->
-  <!-- Dropdown Menu -->
   <link rel="stylesheet" href="css/superfish.css">
-  <!-- Owl Slider -->
-  <!-- <link rel="stylesheet" href="css/owl.carousel.css"> -->
-  <!-- <link rel="stylesheet" href="css/owl.theme.default.min.css"> -->
-  <!-- Date Picker -->
   <link rel="stylesheet" href="css/bootstrap-datepicker.min.css">
-  <!-- CS Select -->
   <link rel="stylesheet" href="css/cs-select.css">
   <link rel="stylesheet" href="css/cs-skin-border.css">
-
-  <!-- Themify Icons -->
   <link rel="stylesheet" href="css/themify-icons.css">
-  <!-- Flat Icon -->
   <link rel="stylesheet" href="css/flaticon.css">
-  <!-- Icomoon -->
   <link rel="stylesheet" href="css/icomoon.css">
-  <!-- Flexslider  -->
   <link rel="stylesheet" href="css/flexslider.css">
-
-  <!-- Style -->
   <link rel="stylesheet" href="css/style.css">
   <link rel="stylesheet" href="css/mybtn_flot.css">
-
-  <!-- Modernizr JS -->
   <script src="js/modernizr-2.6.2.min.js"></script>
-  <!-- FOR IE9 below -->
-  <!--[if lt IE 9]>
-  <script src="js/respond.min.js"></script>
-  <![endif]-->
-
 </head>
 <body>
 <!------ modals ------->
@@ -150,14 +127,14 @@
                     <h5 class="cursiveFont fontHover" style="margin-bottom: 0;padding-bottom: 0;">Envía tus datos</h5>
                   </li>
                   <li style="font-size: 1.5rem; color: #0c5460">
-                    <input type="text" name="name" class="borde_r" placeholder="Nombre" id="from_name" required style="height: 25px; min-width: 30px!important;"/>
+                    <input type="text" name="name" class="borde_r" placeholder="Nombre" required style="height: 25px; min-width: 30px!important;"/>
                   </li>
                   <li style="font-size: 1.5rem; color: #0c5460">
-                    <input type="email" name="email" placeholder="email@example.com" id="from_email" required style="height: 25px; min-width: 30px!important;" />
+                    <input type="email" name="email" placeholder="email@example.com" required style="height: 25px; min-width: 30px!important;" />
                     <span class="form_hint">Formato "email@domino.com"</span>
                   </li>
                   <li style="font-size: 1.5rem; color: #0c5460">
-                    <textarea name="message" cols="40" rows="6" required id="from_message" style="height: 80px; width: 200px;">Puesto requerido: </textarea>
+                    <textarea name="message" cols="40" rows="6" required style="height: 80px; width: 200px;" placeholder="Puesto requerido:"> </textarea>
                   </li>
                   <li style="font-size: 1.5rem; color: #0c5460">
                     <input class="btn btn-primary btn-luxe-primary" type="button" value="Enviar" onclick="enviarEmail()" style="height: 40px; width: 90px; box-shadow: none; margin: auto;"/>
@@ -295,41 +272,6 @@
     <div id="fh5co-contact-section" style=" display:flex; flex-direction: column-reverse; padding-top: 1.5rem!important; padding-bottom: 0.5rem!important;">
       <div class="row">
         <div class="col-md-6">
-          <!--
-          <div class="col-md-12">
-            <h3>Visitanos</h3>
-            <p>Far far away, behind the word mountains, far from the countries Vokalia and Consonantia, there live the blind texts.</p>
-            <ul class="contact-info">
-              <li><i class="ti-map"></i>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Cum, velit!</li>
-              <li><i class="ti-mobile"></i>+ 1234 5678 91</li>
-              <li><i class="ti-envelope"></i><a href="#">info@yoursite.com</a></li>
-            </ul>
-          </div>
-          <div class="col-md-12">
-            <div class="row">
-              <div class="col-md-6">
-                <div class="form-group">
-                  <input type="text" class="form-control" placeholder="Nombre">
-                </div>
-              </div>
-              <div class="col-md-6">
-                <div class="form-group">
-                  <input type="text" class="form-control" placeholder="Email">
-                </div>
-              </div>
-              <div class="col-md-12">
-                <div class="form-group">
-                  <textarea name="" class="form-control" id="" cols="30" rows="7" placeholder="Su Mensaje"></textarea>
-                </div>
-              </div>
-              <div class="col-md-12">
-                <div class="form-group">
-                  <input type="submit" value="Enviar" class="btn btn-primary">
-                </div>
-              </div>
-            </div>
-          </div>
-          -->
           <form class="contact_form" id="contactForm">
             <ul>
               <li>
@@ -416,27 +358,16 @@
 </div>
 <!-- Javascripts -->
 <script src="js/jquery-2.1.4.min.js"></script>
-<!-- Dropdown Menu -->
 <script src="js/hoverIntent.js"></script>
 <script src="js/superfish.js"></script>
-<!-- Bootstrap -->
 <script src="js/bootstrap.min.js"></script>
-<!-- Waypoints -->
 <script src="js/jquery.waypoints.min.js"></script>
-<!-- Counters -->
 <script src="js/jquery.countTo.js"></script>
-<!-- Stellar Parallax -->
 <script src="js/jquery.stellar.min.js"></script>
-<!-- Owl Slider -->
-<!-- // <script src="js/owl.carousel.min.js"></script> -->
-<!-- Date Picker -->
 <script src="js/bootstrap-datepicker.min.js"></script>
-<!-- CS Select -->
 <script src="js/classie.js"></script>
 <script src="js/selectFx.js"></script>
-<!-- Flexslider -->
 <script src="js/jquery.flexslider-min.js"></script>
-<!-- Google Map -->
 <script src="https://maps.googleapis.com/maps/api/js?key=AIzaSyCefOgb1ZWqYtj7raVSmN4PL2WkTrc-KyA&sensor=false"></script>
 <script src="js/google_map.js"></script>
 <script src="js/custom.js"></script>
