--- a/index.html
+++ b/index.html
@@ -12,10 +12,7 @@
   <meta name="keywords" content="Hoteles, CDMX, PUNTOMX, TURISTA" />
   <meta name="author" content="eknr" />
   <!--Completado-->
-  <!-- FontAwesomeKit -->
-  <script src="https://kit.fontawesome.com/f40904d23d.js" crossorigin="anonymous"></script>
   <!-- Facebook and Twitter integration -->
-
   <meta property="og:title" content=""/>
   <meta property="og:image" content=""/>
   <meta property="og:url" content=""/>
@@ -25,36 +22,28 @@
   <meta name="twitter:image" content="" />
   <meta name="twitter:url" content="" />
   <meta name="twitter:card" content="" />
-
-  <!-- Place favicon.ico and apple-touch-icon.png in the root directory -->
   <link rel="shortcut icon" href="assets/logos/puntomx_ico.ico">
+  <script src="https://kit.fontawesome.com/f40904d23d.js" crossorigin="anonymous"></script>
+  <!------------------------------------------------->
   <!-- Stylesheets -->
   <!-- Dropdown Menu -->
   <link rel="stylesheet" href="css/superfish.css">
-  <!-- Owl Slider -->
-  <!-- <link rel="stylesheet" href="css/owl.carousel.css"> -->
-  <!-- <link rel="stylesheet" href="css/owl.theme.default.min.css"> -->
-  <!-- Date Picker -->
   <link rel="stylesheet" href="css/bootstrap-datepicker.min.css">
-  <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap@4.6.1/dist/css/bootstrap.min.css" integrity="sha384-zCbKRCUGaJDkqS1kPbPd7TveP5iyJE0EjAuZQTgFLD2ylzuqKfdKlfG/eSrtxUkn" crossorigin="anonymous">
-  <!--<link rel="stylesheet" href="css/bootstrap.min.css">-->
-  <!-- CS Select -->
   <link rel="stylesheet" href="css/cs-select.css">
   <link rel="stylesheet" href="css/cs-skin-border.css">
-  <!-- Themify Icons -->
   <link rel="stylesheet" href="css/themify-icons.css">
-  <!-- Flat Icon -->
   <link rel="stylesheet" href="css/flaticon.css">
-  <!-- Icomoon -->
   <link rel="stylesheet" href="css/icomoon.css">
-  <!-- Flexslider  -->
   <link rel="stylesheet" href="css/flexslider.css">
-  <!-- Style -->
-  <link rel="stylesheet" href="css/style.css">
   <link rel="stylesheet" href="css/mybtn_flot.css">
-  <!-- Modernizr JS -->
+  <link rel="stylesheet" href="css/bootstrap.min.css">
+  <link rel="stylesheet" type="text/css" href="css/datepicker.css"/>
+  <link rel="stylesheet" type="text/css" href="slick/slick.css"/>
+  <link rel="stylesheet" type="text/css" href="slick/slick-theme.css"/>
+  <link rel="stylesheet" href="css/t-style.css">
+  <link rel="stylesheet" href="css/style.css">
   <script src="js/modernizr-2.6.2.min.js"></script>
-
+  <!------------------------------------------------->
 </head>
 <body>
 <!------ modals ------->
@@ -87,7 +76,7 @@
   </div>
 </div>
 <div class="modal fade" id="sucursalH" tabindex="-1" role="dialog" aria-labelledby="exampleModalCenterTitle" aria-hidden="true">
-  <div class="modal-dialog modal-dialog-centered" role="document">
+  <div class="modal-dialog modal-dialog-centered modal-lg" role="document">
     <div class="modal-content">
       <div class="modal-header" style="background-color: var(--color-primario);">
         <h5 class="modal-title fontWhite cursiveFont">Hotel Punto MX - Ubicación de la Sucursal</h5>
@@ -153,7 +142,7 @@
                     <span class="form_hint">Formato "email@domino.com"</span>
                   </li>
                   <li style="font-size: 1.5rem; color: #0c5460">
-                    <textarea name="message" cols="40" rows="6" required id="from_message" style="height: 80px; width: 200px;">Puesto requerido: </textarea>
+                    <textarea name="message" cols="40" rows="6" required id="from_message" style="height: 80px; width: 200px;" placeholder="Puesto requerido"></textarea>
                   </li>
                   <li style="font-size: 1.5rem; color: #0c5460">
                     <input class="btn btn-primary btn-luxe-primary" type="button" value="Enviar" onclick="enviarEmail()" style="height: 40px; width: 90px; box-shadow: none; margin: auto;"/>
@@ -762,32 +751,22 @@
   <!-- END fh5co-page -->
 
 </div>
-<!-- END fh5co-wrapper -->
-
 <!-- Javascripts -->
-<script src="js/jquery-2.1.4.min.js"></script>
-<!-- Dropdown Menu -->
+<!--<script src="js/jquery-2.1.4.min.js"></script>-->
+<script src="js_t/jquery-1.11.3.min.js"></script>
 <script src="js/hoverIntent.js"></script>
 <script src="js/superfish.js"></script>
-<!-- Bootstrap -->
 <script src="js/bootstrap.min.js"></script>
-<!-- Waypoints -->
 <script src="js/jquery.waypoints.min.js"></script>
-<!-- Counters -->
 <script src="js/jquery.countTo.js"></script>
-<!-- Stellar Parallax -->
 <script src="js/jquery.stellar.min.js"></script>
-<!-- Owl Slider -->
-<!-- // <script src="js/owl.carousel.min.js"></script> -->
-<!-- Date Picker -->
-<script src="js/bootstrap.min.js"></script>
 <script src="js/bootstrap-datepicker.min.js"></script>
-<!-- CS Select -->
 <script src="js/classie.js"></script>
 <script src="js/selectFx.js"></script>
-<!-- Flexslider -->
+<script src="slick/slick.min.js"></script>
+<script src="js_t/datepicker.min.js"></script>
+<script src="js_t/jquery.singlePageNav.min.js"></script>
 <script src="js/jquery.flexslider-min.js"></script>
 <script src="js/custom.js"></script>
-
 </body>
 </html>
