--- a/index.html
+++ b/index.html
@@ -231,18 +231,6 @@
                     <li><a href="restaurant.html">Restaurante MX</a></li>
                     <li><a href="cafe.html">Café MX</a></li>
                     <li><a href="roomservice.html">Room Service</a></li>
-                    <!--<li>
-                        <a href="#" class="fh5co-sub-ddown">King Hotel</a>
-                        <ul class="fh5co-sub-menu">
-                            <li><a href="http://freehtml5.co/preview/?item=build-free-html5-bootstrap-template" target="_blank">Build</a></li>
-                            <li><a href="http://freehtml5.co/preview/?item=work-free-html5-template-bootstrap" target="_blank">Work</a></li>
-                            <li><a href="http://freehtml5.co/preview/?item=light-free-html5-template-bootstrap" target="_blank">Light</a></li>
-                            <li><a href="http://freehtml5.co/preview/?item=relic-free-html5-template-using-bootstrap" target="_blank">Relic</a></li>
-                            <li><a href="http://freehtml5.co/preview/?item=display-free-html5-template-using-bootstrap" target="_blank">Display</a></li>
-                            <li><a href="http://freehtml5.co/preview/?item=sprint-free-html5-template-bootstrap" target="_blank">Sprint</a></li>
-                        </ul>
-                    </li>
-                    <li><a href="#">Five Star Hotel</a></li>-->
                   </ul>
                 </li>
                 <li><a href="cdmx.html">Conoce la CDMX</a></li>
@@ -253,9 +241,7 @@
           </div>
         </div>
       </header>
-
     </div>
-    <!-- end:fh5co-header -->
     <aside id="fh5co-hero" class="js-fullheight">
       <div class="flexslider js-fullheight">
         <ul class="slides myspecialC">
@@ -350,6 +336,7 @@
     <div class="container">
       <div class="row">
         <a href="https://www.beds24.com/booking.php?propid=36868&referer=BookingLink" class="mybtn-flotante text-rsv">Reserva aquí</a>
+        <a href="https://api.whatsapp.com/send/?phone=5618887875&text&app_absent=0" target="_blank" target="_blank" class="mywap-flotante text-rsv"><i class="fa-brands fa-whatsapp"></i></a>
       </div>
     </div>
     <!--
