--- a/cafe.html
+++ b/cafe.html
@@ -237,7 +237,7 @@
 
         </div>
         <!-- end:fh5co-header -->
-        <div class="fh5co-parallax" style="background: linear-gradient( rgba(0, 0, 0, 0.6) 100%, rgba(0, 0, 0, 0.7)100%),url(./assets/webp/AMENIDADES_2.jpeg); background-size: contain, cover; background-position: 0 bottom,right bottom!important; background-repeat: repeat,no-repeat;" data-stellar-background-ratio="0.5">
+        <div class="fh5co-parallax" style="background: linear-gradient( rgba(0, 0, 0, 0.3) 100%, rgba(0, 0, 0, 0.7)100%),url(./assets/webp/CAFE_Y_RED_VELVET.jpeg); background-size: contain, cover; background-position: 0 bottom,bottom center!important; background-repeat: repeat,no-repeat;" data-stellar-background-ratio="0.5">
             <div class="overlay"></div>
             <div class="container">
                 <div class="row">
@@ -291,7 +291,7 @@
                 <div class="row">
                     <div class="col-md-12">
                         <div class="section-title text-center" style="margin-bottom: 30px;">
-                            <h2>Galería</h2>
+                            <h2>Conoce nuestros servicios</h2>
                         </div>
                     </div>
                 </div>
@@ -299,52 +299,19 @@
                     <div class="slider">
                         <ul>
                             <li>
-                                <img src="./assets/webp/SALMON.jpeg" alt="">
+                                <img src="./assets/webp/CAFE_Y_BAGUETTE.jpeg" alt="">
                             </li>
                             <li>
-                                <img src="./assets/webp/JACUZZI.jpeg" alt="">
+                                <img src="./assets/webp/CAFE_Y_RED_VELVET.jpeg" alt="">
                             </li>
                             <li>
-                                <img src="./assets/webp/AMENIDADES.jpeg" alt="">
+                                <img src="./assets/webp/CAFE_Y_BAGUETTE.jpeg" alt="">
                             </li>
                             <li>
-                                <img src="./assets/webp/Punto_MX-32.jpeg" alt="">
+                                <img src="./assets/webp/CAFE_Y_RED_VELVET.jpeg" alt="">
                             </li>
                         </ul>
                     </div>
-                    <!--<div class="col-md-4">
-                      <div class="blog-grid" style="background-image: url(assets/webp/SUITE_CON_JACUZZI.webp); background-size: contain;">
-                        <div class="date text-center">
-                          <span>09</span>
-                          <small>Ago</small>
-                        </div>
-                      </div>
-                      <div class="desc">
-                        <h3><a href="#"></a></h3>
-                      </div>
-                    </div>
-                    <div class="col-md-4">
-                      <div class="blog-grid" style="background-image: url(assets/webp/AMENIDADES.webp); background-size: contain;">
-                        <div class="date text-center">
-                          <span>09</span>
-                          <small>Ago</small>
-                        </div>
-                      </div>
-                      <div class="desc">
-                        <h3><a href="#"></a></h3>
-                      </div>
-                    </div>
-                    <div class="col-md-4">
-                      <div class="blog-grid" style="background-image: url(assets/webp/ROOM_SERVICE.webp); background-size: contain;">
-                        <div class="date text-center">
-                          <span>09</span>
-                          <small>Ago</small>
-                        </div>
-                      </div>
-                      <div class="desc">
-                        <h3><a href="#"></a></h3>
-                      </div>
-                    </div>-->
                 </div>
             </div>
         </div>
@@ -385,11 +352,11 @@
                     <div class="col-md-3">
                         <ul class="social-icons">
                             <li>
-                                <a href="https://twitter.com/hotel_puntomx?lang=es" target="_blank"><i class="icon-twitter-with-circle"></i></a>
-                                <a href="https://www.facebook.com/HotelPuntoMX/" target="_blank"><i class="icon-facebook-with-circle"></i></a>
-                                <a href="https://www.instagram.com/hotelpuntomx/" target="_blank"><i class="icon-instagram-with-circle"></i></a>
-                                <!--<a href="#"><i class="fa fa-tripadvisor"></i></a>-->
-                                <!--<a href="#"><i class="icon-linkedin-with-circle"></i></a>-->
+                                <a class="circle_element" href="https://twitter.com/hotel_puntomx?lang=es" target="_blank"><i class="fa-brands fa-twitter" style="color: #000;"></i></a>
+                                <a class="circle_element" href="https://www.facebook.com/HotelPuntoMX/" target="_blank"><i class="fa-brands fa-facebook" style="color: #000;"></i></a>
+                                <a class="circle_element" href="https://www.instagram.com/hotelpuntomx/" target="_blank"><i class="fa-brands fa-instagram" style="color: #000;"></i></a>
+                                <!--<a href="https://www.tripadvisor.com.mx/Hotel_Review-g150800-d12696075-Reviews-Hotel_Punto_MX-Mexico_City_Central_Mexico_and_Gulf_Coast.html" target="_blank"><span class="footer_esp_ta">--</span></a>-->
+                                <a class="circle_element" href="https://www.tripadvisor.com.mx/Hotel_Review-g150800-d12696075-Reviews-Hotel_Punto_MX-Mexico_City_Central_Mexico_and_Gulf_Coast.html" target="_blank"><img src="./assets/logos/tripadvisor_l.png"></a>
                             </li>
                         </ul>
                     </div>
