--- a/ng/cafe.html
+++ b/ng/cafe.html
@@ -23,10 +23,10 @@
     <meta name="twitter:url" content="" />
     <meta name="twitter:card" content="" />
     <link rel="shortcut icon" href="assets/logos/puntomx_ico.ico">
-    <!-----------------------FONT AWESOME--------------------->
     <script src="https://kit.fontawesome.com/f40904d23d.js" crossorigin="anonymous"></script>
     <link rel="stylesheet" href="css/superfish.css">
     <link rel="stylesheet" href="css/bootstrap-datepicker.min.css">
+    <link rel="stylesheet" href="css/bootstrap.min.css">
     <link rel="stylesheet" href="css/cs-select.css">
     <link rel="stylesheet" href="css/cs-skin-border.css">
     <link rel="stylesheet" href="css/themify-icons.css">
@@ -386,6 +386,8 @@
 <script src="js/jquery-2.1.4.min.js"></script>
 <script src="js/hoverIntent.js"></script>
 <script src="js/superfish.js"></script>
+<!--<script src="https://cdn.jsdelivr.net/npm/popper.js@1.12.9/dist/umd/popper.min.js"></script>-->
+<!--<script src="https://cdn.jsdelivr.net/npm/bootstrap@4.0.0/dist/js/bootstrap.min.js" integrity="sha384-JZR6Spejh4U02d8jOt6vLEHfe/JQGiRRSQQxSfFWpi1MquVdAyjUar5+76PVCmYl" crossorigin="anonymous"></script>-->
 <script src="js/bootstrap.min.js"></script>
 <script src="js/jquery.waypoints.min.js"></script>
 <script src="js/jquery.countTo.js"></script>
