--- a/tours.html
+++ b/tours.html
@@ -5,7 +5,7 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <title>Tours - Hotel PUNTO MX</title>
     <meta name="viewport" content="width=device-width, initial-scale=1">
-    <meta name="description" content="Website Hoteles PUNTO MX"/>
+    <meta name="description" content="Conoce México con los Tours que Hotel Punto MX pone a tu disposición."/>
     <meta name="keywords" content="Hoteles, CDMX, PUNTOMX, TURISTA"/>
     <meta name="author" content="eknr"/>
     <meta name="robots" content="index,follow"/>
@@ -25,9 +25,23 @@
         f.parentNode.insertBefore(j, f);
     })(window, document, 'script', 'dataLayer', 'GTM-WJG6GSM9');</script>
     <!-- End Google Tag Manager -->
+    <!-- Google tag (gtag.js) -->
+    <script async src="https://www.googletagmanager.com/gtag/js?id=G-BWCT951Z6Z"></script>
+    <script>
+        window.dataLayer = window.dataLayer || [];
+
+        function gtag() {
+            dataLayer.push(arguments);
+        }
+
+        gtag('js', new Date());
+
+        gtag('config', 'G-BWCT951Z6Z');
+    </script>
     <!------------------------------------------------->
     <!--Completado-->
     <!-- Facebook and Twitter integration -->
+    <!--
     <meta property="og:title" content=""/>
     <meta property="og:image" content=""/>
     <meta property="og:url" content=""/>
@@ -37,6 +51,7 @@
     <meta name="twitter:image" content=""/>
     <meta name="twitter:url" content=""/>
     <meta name="twitter:card" content=""/>
+    -->
     <!-- FontAwesomeKit -->
     <script src="https://kit.fontawesome.com/f40904d23d.js" crossorigin="anonymous"></script>
     <link rel="shortcut icon" href="assets/logos/puntomx_ico.ico">
