--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
   <meta charset="utf-8">
   <meta http-equiv="X-UA-Compatible" content="IE=edge">
   <!------------------------------------------------->
-  <link rel="icon" href="assets/logos/HPMx.png">
+  <!--<link rel="icon" href="assets/logos/HPMx.png">-->
   <!------------------------------------------------->
   <!-- Google Tag Manager -->
   <script>(function(w,d,s,l,i){w[l]=w[l]||[];w[l].push({'gtm.start':
@@ -36,6 +36,8 @@
   <meta name="keywords" content="Hoteles, CDMX, PUNTOMX, TURISTA, VACACIONES, MÉXICO, CONOCE A MÉXICO"/>
   <meta name="author" content="EKNR" />
   <meta name="robots" content="index,follow"/>
+  <meta name="distribution" content="global">
+  <link rel="icon" href="favicon.ico" type="image/x-icon">
   <!--Completado-->
   <!-- Facebook and Twitter integration -->
   <!--
