--- a/services.html
+++ b/services.html
@@ -9,7 +9,7 @@
     <meta name="keywords" content="Hoteles, CDMX, PUNTOMX, TURISTA"/>
     <meta name="author" content="eknr"/>
     <meta name="robots" content="index,follow"/>
-    <link rel="icon" href="assets/logos/HPMx.png" type="image/x-icon">
+    <link rel="icon" href="favicon.ico" type="image/x-icon">
     <!------------------------------------------------->
     <!-- Google Tag Manager -->
     <script>(function (w, d, s, l, i) {
@@ -52,7 +52,6 @@
     <meta name="twitter:url" content=""/>
     <meta name="twitter:card" content=""/>
     <!-------------------------------------------->
-    <link rel="shortcut icon" href="assets/logos/puntomx_ico.ico">
     <!-----------------------FONT AWESOME--------------------->
     <script src="https://kit.fontawesome.com/f40904d23d.js" crossorigin="anonymous"></script>
     <!-------------------------------------------->
